--- a/style.css
+++ b/style.css
@@ -119,12 +119,17 @@ body {
 }
 
 .item .item__add {
-  background-color: rgb(5, 52, 219);
+  background-color: rgb(10, 118, 79);
   border: 0;
   cursor: pointer;
   margin: 0;
   padding: 10px;
   color: white;
+  border-radius: 15px;
+}
+
+.item .item__add:hover {
+  background-color: rgb(3, 52, 45);
 }
 
 .cart {
@@ -144,6 +149,8 @@ body {
   width: 170px;
   height: 35px;
   margin: 0 auto;
-  border: 2px solid rgb(5, 52, 219);
-  background-color: rgb(249, 249, 246);
+  border: 2px solid rgb(10, 118, 79);
+  border-radius: 50px;
+  background-color: rgb(10, 118, 79);
+  color: white;
 }
